modules/samples/kubernetes-demo/service/kubernetes/vehicle_rest_service/vehicle_rest_service_deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "vehicle-telemetry-service-v1"
  name: "vehicle-telemetry-service-v1-deployment"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "vehicle-telemetry-service-v1"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "index.docker.io/andreanimi/vehicle-telemetry-service-v1"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 9090
        name: "vehicle-telemetry-service-v1"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
