modules/samples/kubernetes-demo/service/kubernetes/vehicle_rest_service/vehicle_rest_service_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "vehicle-telemetry-service-v1"
  name: "vehicle-telemetry-service-v1"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "vehicle-telemetry-service-v1"
  type: "NodePort"
